--- a/project.yml
+++ b/project.yml
@@ -159,7 +159,7 @@ sidebar:
       - title: Oracle Linux
         pdf-filename: OL-FCP
         entries:
-        - title: OL 9
+        - title: Oracle Linux 9
           entries:
           - title: "9.5"
             url: /hu-ol-95.html
@@ -173,7 +173,7 @@ sidebar:
             url: /hu_ol_91.html
           - title: "9.0"
             url: /hu_ol_90.html
-        - title: OL 8
+        - title: Oracle Linux 8
           pdf-filename: OL-8-FCP
           entries:
           - title: "8.10"
@@ -198,7 +198,7 @@ sidebar:
             url: /hu_ol_81.html
           - title: "8.0"
             url: /hu_ol_80.html
-        - title: OL 7
+        - title: Oracle Linux 7
           pdf-filename: OL-7-FCP
           entries:
           - title: "7.9"
@@ -221,7 +221,7 @@ sidebar:
             url: /hu_ol_71.html
           - title: "7.0"
             url: /hu_ol_70.html
-        - title: OL 6
+        - title: Oracle Linux 6
           pdf-filename: OL-6-FCP
           entries:
           - title: "6.10"
