Add Proxmox 8.4 FCP, iSCSI and NVMe

--- a/project.yml
+++ b/project.yml
@@ -238,6 +238,10 @@ sidebar:
             url: /hu_ol_65.html
           - title: "6.4"
             url: /hu_ol_64.html
+      - title: Proxmox
+        entries:
+        - title: Proxmox 8.4
+          url: /hu-proxmox-84.html
       - title: RHEL
         entries:
         - title: RHEL 10
@@ -500,6 +504,10 @@ sidebar:
             url: /nvme_ol_78.html
           - title: "7.7"
             url: /nvme_ol_77.html
+      - title: Proxmox
+        entries:
+        - title: Proxmox 8.4
+          url: /nvme-proxmox-84.html
       - title: RHEL
         pdf-filename: NVMeoF RHEL
         entries:
