Apply suggestions from code review
Co-authored-by: Paula Carrigan <77334475+netapp-pcarriga@users.noreply.github.com>

--- a/project.yml
+++ b/project.yml
@@ -468,7 +468,7 @@ sidebar:
           url: /hu_windows_2012r2.html
     - title: Configure hosts with NVMe-oF
       entries:
-      - title: Overview
+      - title: Learn about configuring NVMe-oF hosts
         url: /hu-nvme-index.html
       - title: AIX
         url: /nvme_aix.html
