ontapdoc-3412 RHEL overview & Before you begin title

--- a/project.yml
+++ b/project.yml
@@ -530,6 +530,8 @@ sidebar:
       - title: RHEL
         pdf-filename: NVMeoF RHEL
         entries:
+        - title: Learn about configuring NVMe-oF hosts
+          url: /hu-nvme-rhel.html
         - title: RHEL 10
           entries:
           - title: "10.0"
