ontapdoc-3362 content improvements

--- a/project.yml
+++ b/project.yml
@@ -484,18 +484,8 @@ sidebar:
         - title: Oracle Linux 9
           pdf-filename: NVMeF OL
           entries:
-          - title: "9.5"
+          - title: "9x"
             url: /nvme-ol-95.html
-          - title: "9.4"
-            url: /nvme_ol_94.html
-          - title: "9.3"
-            url: /nvme_ol_93.html
-          - title: "9.2"
-            url: /nvme_ol_92.html
-          - title: "9.1"
-            url: /nvme_ol_91.html
-          - title: "9.0"
-            url: /nvme_ol_90.html
         - title: Oracle Linux 8
           pdf-filename: NVMeF OL
           entries:
