fix broken links

--- a/project.yml
+++ b/project.yml
@@ -177,7 +177,7 @@ sidebar:
         - title: Oracle Linux 9.x
           url: /hu-ol-9x.html
         - title: Oracle Linux 8.x
-          url: /hu-ol-8.x.html
+          url: /hu-ol-8x.html
         - title: Oracle Linux 7
           pdf-filename: OL-7-FCP
           entries:
