--- a/project.yml
+++ b/project.yml
@@ -483,39 +483,11 @@ sidebar:
         entries:
         - title: Oracle Linux 9x
           url: /nvme-ol-9x.html
-        - title: Oracle Linux 8
-          pdf-filename: NVMeF OL
-          entries:
-          - title: "8.10"
-            url: /nvme-ol-810.html
-          - title: "8.9"
-            url: /nvme_ol_89.html
-          - title: "8.8"
-            url: /nvme_ol_88.html
-          - title: "8.7"
-            url: /nvme_ol_87.html
-          - title: "8.6"
-            url: /nvme_ol_86.html
-          - title: "8.5"
-            url: /nvme_ol_85.html
-          - title: "8.4"
-            url: /nvme_ol_84.html
-          - title: "8.3"
-            url: /nvme_ol_83.html     
-          - title: "8.2"
-            url: /nvme_ol_82.html
-          - title: "8.1"
-            url: /nvme_ol_81.html
-        - title: Oracle Linux 7
-          entries:
-          - title: "7.9"
-            url: /nvme_ol_79.html
-          - title: "7.8"
-            url: /nvme_ol_78.html
-          - title: "7.7"
-            url: /nvme_ol_77.html
+        - title: Oracle Linux 8x
+          url: /nvme-ol-8x.html
+        - title: Oracle Linux 7x
+          url: /nvme-ol-7x.html
       - title: RHEL
-        pdf-filename: NVMeoF RHEL
         entries:
         - title: RHEL 10x
           url: /nvme-rhel-10x.html
