ontapdoc-3362 nav bar

--- a/project.yml
+++ b/project.yml
@@ -480,6 +480,7 @@ sidebar:
         - title: VMware vSphere 7
           url: /nvme_esxi_7.html
       - title: Oracle Linux
+        pdf-filename: NVMeoF Oracle Linux
         entries:
         - title: Oracle Linux 9x
           url: /nvme-ol-9x.html
@@ -488,6 +489,7 @@ sidebar:
         - title: Oracle Linux 7x
           url: /nvme-ol-7x.html
       - title: RHEL
+        pdf-filename: NVMeoF RHEL
         entries:
         - title: RHEL 10x
           url: /nvme-rhel-10x.html
