Add NVMe OL 9.6

--- a/project.yml
+++ b/project.yml
@@ -188,6 +188,8 @@ sidebar:
         entries:
         - title: Oracle Linux 9
           entries:
+          - title: "9.6"
+            url: /hu-ol-96.html
           - title: "9.5"
             url: /hu-ol-95.html
           - title: "9.4"
