Update project.yml file

--- a/project.yml
+++ b/project.yml
@@ -188,8 +188,6 @@ sidebar:
         entries:
         - title: Oracle Linux 9
           entries:
-          - title: "9.6"
-            url: /hu-ol-96.html
           - title: "9.5"
             url: /hu-ol-95.html
           - title: "9.4"
@@ -486,6 +484,8 @@ sidebar:
         - title: Oracle Linux 9
           pdf-filename: NVMeF OL
           entries:
+          - title: "9.6"
+            url: /nvme-ol-96.html
           - title: "9.5"
             url: /nvme-ol-95.html
           - title: "9.4"
