--- a/project.yml
+++ b/project.yml
@@ -398,6 +398,9 @@ sidebar:
             url: /nvme_ol_77.html
       - title: RHEL
         entries:
+        - title: ONTAP support and features
+          pdf-filename: NVMeoF RHEL ONTAP support and features
+          url: /nvme-rhel-overview.html
         - title: 10x
           pdf-filename: NVMeoF RHEL 10x
           url: /nvme-rhel-10x.html
