--- a/project.yml
+++ b/project.yml
@@ -397,17 +397,15 @@ sidebar:
           - title: "7.7"
             url: /nvme_ol_77.html
       - title: RHEL
+        pdf-filename: NVMeoF RHEL 
         entries:
         - title: ONTAP support and features 
           url: /nvme-rhel-overview.html
         - title: 10x
-          pdf-filename: NVMeoF RHEL 10x
           url: /nvme-rhel-10x.html
         - title: 9x
-          pdf-filename: NVMeoF RHEL 9x
           url: /nvme-rhel-9x.html
         - title: 8x
-          pdf-filename: NVMeoF RHEL 8x
           url: /nvme-rhel-8x.html
       - title: Rocky Linux
         pdf-filename: NVMeoF Rocky Linux
