ontapdoc-3362 rhel and rocky linux

--- a/project.yml
+++ b/project.yml
@@ -410,6 +410,8 @@ sidebar:
       - title: Rocky Linux
         pdf-filename: NVMeoF Rocky Linux
         entries:
+        - title: ONTAP support and features 
+          url: /nvme-rockylinux-overview.html
         - title: Rocky Linux 10
           entries:
           - title: "10.0"
