ontapdoc-3362 OL redirects

--- a/project.yml
+++ b/project.yml
@@ -348,15 +348,13 @@ sidebar:
         - title: VMware vSphere 7
           url: /nvme_esxi_7.html
       - title: Oracle Linux
+        pdf-filename: NVMeoF OL 
         entries:
         - title: 9x
-          pdf-filename: NVMeoF-OL-9x
           url: /nvme-ol-9x.html
         - title: 8x
-          pdf-filename: NVMeoF-OL-8x
           url: /nvme-ol-8x.html
         - title: 7x
-          pdf-filename: NVMeoF-OL-7x
           url: /nvme-ol-7x.html
       - title: RHEL
         pdf-filename: NVMeoF RHEL
