ontapdoc-3418 OL 9.6 and content improvements

--- a/project.yml
+++ b/project.yml
@@ -351,7 +351,7 @@ sidebar:
         pdf-filename: NVMeoF OL 
         entries:
         - title: ONTAP support and features
-          url: /nvme-ol-overview.html
+          url: /nvme-ol-supported-features.html
         - title: 9x
           url: /nvme-ol-9x.html
         - title: 8x
