Add vertias infoscale 9

--- a/project.yml
+++ b/project.yml
@@ -316,6 +316,8 @@ sidebar:
           url: /hu_ubuntu_2004.html
       - title: Veritas
         entries:
+        - title: Infoscale 9
+          url: /hu-veritas-9x.html
         - title: Infoscale 8
           url: /hu_veritas_8x.html
         - title: Infoscale 7
