Edit post IE review

--- a/project.yml
+++ b/project.yml
@@ -404,7 +404,7 @@ sidebar:
         pdf-filename: NVMeoF Proxmox
         entries:
         - title: ONTAP support and features
-          url: /nvme-proxmox-index.html
+          url: /nvme-proxmox-supported-features.html
         - title: Proxmox VE 9x
           url: /nvme-proxmox-ve-9x.html
       - title: RHEL
