--- a/_index.yml
+++ b/_index.yml
@@ -25,7 +25,7 @@ indexpage:
         - title: Configure hosts with FCP and iSCSI 
           url: /hu_fcp_scsi_index.html 
         - title: Configure hosts with NVMe-oF 
-          url: /hu_nvme_index.html  
+          url: /hu-nvme-index.html  
     - title: More resources
       links:
         - title: Cloud Volumes ONTAP
