Minor edits to align with quality improvements

--- a/project.yml
+++ b/project.yml
@@ -220,7 +220,7 @@ sidebar:
             url: /hu_ol_64.html
       - title: Proxmox
         entries:
-        - title: Proxmox 9.0
+        - title: Proxmox VE 9.0
           url: /hu-proxmox-9x.html
       - title: RHEL
         entries:
