--- a/project.yml
+++ b/project.yml
@@ -221,7 +221,7 @@ sidebar:
       - title: Proxmox
         entries:
         - title: Proxmox VE 9.0
-          url: /hu-proxmox-9x.html
+          url: /hu-proxmox-ve-9x.html
       - title: RHEL
         entries:
         - title: RHEL 10
