--- a/project.yml
+++ b/project.yml
@@ -91,7 +91,7 @@ sidebar:
               - title: Install Windows Host Utilities 7.1
                 url: /hu_wuhu_71.html 
           - title: Configure settings for Windows Host Utilities
-            url: /hu_wuhu_hba_settings.html
+            url: /hu-windows-configure-registry-settings.html
           - title: Upgrade Windows Host Utilities
             url: /hu_wuhu_upgrade.html
           - title: Repair and remove Windows Host Utilities
