--- a/project.yml
+++ b/project.yml
@@ -220,11 +220,9 @@ sidebar:
             url: /hu_ol_64.html
       - title: Proxmox
         entries:
-        - title: Proxmox VE 9.x
+        - title: VE 9.x
           url: /hu-proxmox-ve-9x.html
-      - title: Proxmox
-        entries:
-        - title: Proxmox VE 8.x
+        - title: VE 8.x
           url: /hu-proxmox-ve-8x.html
       - title: RHEL
         entries:
@@ -373,9 +371,9 @@ sidebar:
         entries:
         - title: ONTAP support and features
           url: /nvme-proxmox-supported-features.html
-        - title: VE 9x
+        - title: VE 9.x
           url: /nvme-proxmox-ve-9x.html
-        - title: VE 8x
+        - title: VE 8.x
           url: /nvme-proxmox-ve-8x.html
       - title: RHEL
         pdf-filename: NVMeoF RHEL 
