--- a/_index.yml
+++ b/_index.yml
@@ -38,5 +38,7 @@ indexpage:
           url: https://docs.netapp.com/us-en/ontap/san-admin/index.html
         - title: SAN configuration
           url: https://docs.netapp.com/us-en/ontap/san-config/index.html
+        - title: Earlier Host Utilities releases 
+          url: https://mysupport.netapp.com/documentation/productlibrary/index.html?archive=true&language=en&productID=61343
 
 
