--- a/project.yml
+++ b/project.yml
@@ -396,7 +396,7 @@ sidebar:
         entries:
         - title: ONTAP support and features 
           url: /nvme-sles-supported-features.html
-        - title: SUSE Linux Enterprise Server 15 SP.x
+        - title: 15 SP.x
           url: /nvme-sles15-spx.html
       - title: Ubuntu
         entries:
