--- a/project.yml
+++ b/project.yml
@@ -348,13 +348,13 @@ sidebar:
       - title: Learn about configuring NVMe-oF hosts
         url: /hu-nvme-index.html
       - title: AIX
-        url: /nvme_aix.html
+        url: /nvme-aix.html
       - title: ESXi
         entries:
         - title: VMware vSphere 8
-          url: /nvme_esxi_8.html
+          url: /nvme-esxi-8.html
         - title: VMware vSphere 7
-          url: /nvme_esxi_7.html
+          url: /nvme-esxi-7.html
       - title: Oracle Linux
         pdf-filename: NVMeoF OL 
         entries:
@@ -405,21 +405,21 @@ sidebar:
       - title: Ubuntu
         entries:
         - title: "24.04"
-          url: /nvme_ubuntu_2404.html
+          url: /nvme-ubuntu-2404.html
         - title: "22.04"
-          url: /nvme_ubuntu_2204.html
+          url: /nvme-ubuntu-2204.html
       - title: Windows
         entries:
         - title: "2025"
           url: /nvme-windows-2025.html  
         - title: "2022"
-          url: /nvme_windows_2022.html
+          url: /nvme-windows-2022.html
         - title: "2019"
-          url: /nvme_windows_2019.html
+          url: /nvme-windows-2019.html
         - title: "2016"
-          url: /nvme_windows_2016.html
+          url: /nvme-windows-2016.html
         - title: "2012 R2"
-          url: /nvme_windows_2012r2.html
+          url: /nvme-windows-2012r2.html
       - title: Troubleshoot
         url: /troubleshoot.html
     - title: Legal notices
