SLES SME feedback

--- a/project.yml
+++ b/project.yml
@@ -299,15 +299,15 @@ sidebar:
           url: /hu-sles-15spx.html
         - title: SUSE Linux Enterprise Server 12
           entries:
-          - title: 12 SP 5
+          - title: 12 SP5
             url: /hu_sles_12SP5.html
-          - title: 12 SP 4
+          - title: 12 SP4
             url: /hu_sles_12SP4.html
-          - title: 12 SP 3
+          - title: 12 SP3
             url: /hu_sles_12SP3.html
-          - title: 12 SP 2
+          - title: 12 SP2
             url: /hu_sles_12SP2.html
-          - title: 12 SP 1
+          - title: 12 SP1
             url: /hu_sles_12SP1.html
           - title: "12"
             url: /hu_sles_12.html
@@ -400,7 +400,7 @@ sidebar:
         entries:
         - title: ONTAP support and features 
           url: /nvme-sles-supported-features.html
-        - title: 15 SP.x
+        - title: 15 SPx
           url: /nvme-sles15-spx.html
       - title: Ubuntu
         entries:
