Creating first draft for SLES 16

--- a/project.yml
+++ b/project.yml
@@ -294,6 +294,9 @@ sidebar:
           url: /hu_solaris_113.html
       - title: SUSE Linux Enterprise Server
         entries:
+        - title: SUSE Linux Enterprise Server 16
+          pdf-filename: SLES-16-FCP
+          url: /hu-sles-16spx.html
         - title: SUSE Linux Enterprise Server 15
           pdf-filename: SLES-15-FCP
           url: /hu-sles-15spx.html
@@ -400,6 +403,8 @@ sidebar:
         entries:
         - title: ONTAP support and features 
           url: /nvme-sles-supported-features.html
+        - title: "16"
+          url: /nvme-sles16-spx.html
         - title: 15 SPx
           url: /nvme-sles15-spx.html
       - title: Ubuntu
