Add HPE VME 8.0.x

--- a/project.yml
+++ b/project.yml
@@ -201,6 +201,8 @@ sidebar:
             url: /hu_ol_71.html
           - title: "7.0"
             url: /hu_ol_70.html
+        - title: HPE VME 8.0.x
+          url: /hu-hpe-vme-80x.html
         - title: Oracle Linux 6
           pdf-filename: OL-6-FCP
           entries:
