Fis typos in the sidebar

--- a/project.yml
+++ b/project.yml
@@ -171,6 +171,10 @@ sidebar:
         entries:
         - title: 11i v3
           url: /hu_hpux_11iv3.html
+      - title: HPE VME
+        entires:
+        - title: HPE VME 8.0.x
+          url: /hu-hpe-vme-80x.html
       - title: Oracle Linux
         pdf-filename: OL-FCP
         entries:
@@ -201,8 +205,6 @@ sidebar:
             url: /hu_ol_71.html
           - title: "7.0"
             url: /hu_ol_70.html
-        - title: HPE VME 8.0.x
-          url: /hu-hpe-vme-80x.html
         - title: Oracle Linux 6
           pdf-filename: OL-6-FCP
           entries:
