--- a/project.yml
+++ b/project.yml
@@ -172,7 +172,7 @@ sidebar:
         - title: 11i v3
           url: /hu_hpux_11iv3.html
       - title: HPE VME
-        entires:
+        entries:
         - title: HPE VME 8.0.x
           url: /hu-hpe-vme-80x.html
       - title: Oracle Linux
