--- a/project.yml
+++ b/project.yml
@@ -55,6 +55,8 @@ sidebar:
           url: /hu-luhu-release-notes.html
         - title: Install Linux Host Utilities 8.0
           url: /hu-luhu-80.html
+        - title: Install Linux Host Utilities 7.1
+          url: /hu_luhu_71.html
         - title: Learn about the sanlun utility 
           url: /hu-luhu-sanlun-utility.html
         - title: Linux Host Utilities command reference
