--- a/project.yml
+++ b/project.yml
@@ -90,7 +90,7 @@ sidebar:
                 url: /hu_wuhu_72.html
               - title: Install Windows Host Utilities 7.1
                 url: /hu_wuhu_71.html 
-          - title: Learn about Windows Host Utilities configuration
+          - title: Review Windows Host Utilities configuration
             url: /hu-wuhu-configuration.html
           - title: Upgrade Windows Host Utilities
             url: /hu_wuhu_upgrade.html
