--- a/_index.yml
+++ b/_index.yml
@@ -7,7 +7,7 @@ indexpage:
     - title: Get started
       links:
         - title: Learn about SAN host configurations
-          url: /overview.html
+          url: /san-host-index.html
         - title: AIX Host Utilities release notes
           url: /hu-aix-release-notes.html
         - title: HP-UX Host Utilities release notes
@@ -23,7 +23,7 @@ indexpage:
         - title: Install SAN Host Utilities 
           url: /hu_sanhost_index.html 
         - title: Configure hosts with FCP and iSCSI 
-          url: /hu_fcp_scsi_index.html 
+          url: /hu-fcp-scsi-index.html 
         - title: Configure hosts with NVMe-oF 
           url: /hu-nvme-index.html  
     - title: More resources
