--- a/_index.yml
+++ b/_index.yml
@@ -7,7 +7,7 @@ indexpage:
     - title: Get started
       links:
         - title: Learn about SAN host configurations
-          url: //overview.html
+          url: /overview.html
         - title: AIX Host Utilities release notes
           url: /hu-aix-release-notes.html
         - title: HP-UX Host Utilities release notes
