Minor edits post review in staging branch

--- a/project.yml
+++ b/project.yml
@@ -176,10 +176,10 @@ sidebar:
           url: /hu_solaris_113.html
       - title: SUSE Linux Enterprise Server
         entries:
-        - title: SUSE Linux Enterprise Server 16
+        - title: "16"
           pdf-filename: SLES-16-FCP
           url: /hu-sles-16spx.html
-        - title: SUSE Linux Enterprise Server 15
+        - title: "15 SPx"
           pdf-filename: SLES-15-FCP
           url: /hu-sles-15spx.html
       - title: Ubuntu
